Bug 1930931 - Make the dragging interaction still happens when the event target frame is moved/destroyed upon mousedown r=masayuki,dom-core

Differential Revision: https://phabricator.services.mozilla.com/D238318