dom/events/EventStateManager.h
@@ -526,6 +526,17 @@ class EventStateManager : public nsSupportsWeakReference, public nsIObserver {
     return mMouseEnterLeaveHelper;
   }
 
+  nsIContent* GetTrackingDragGestureContent() const {
+    return mGestureDownContent;
+  }
+
+  // If the current frame is for the current gesture down content (being
+  // dragged), when it's destroyed, we should continue the gesture on its
+  // parent.
+  void NotifyDestroyingFrameForGesture(nsIFrame* aFrame);
+
+  bool IsTrackingDragGesture() const { return mGestureDownContent != nullptr; }
+
  protected:
   /*
    * If aTargetFrame's widget has a cached cursor value, resets the cursor
@@ -1215,7 +1226,6 @@ class EventStateManager : public nsSupportsWeakReference, public nsIObserver {
       dom::RemoteDragStartData* aDragStartData, nsIPrincipal* aPrincipal,
       nsIContentSecurityPolicy* aCsp, nsICookieJarSettings* aCookieJarSettings);
 
-  bool IsTrackingDragGesture() const { return mGestureDownContent != nullptr; }
   /**
    * Set the fields of aEvent to reflect the mouse position and modifier keys
    * that were set when the user first pressed the mouse button (stored by
