layout/base/PresShell.cpp
@@ -2230,6 +2230,9 @@ void PresShell::NotifyDestroyingFrame(nsIFrame* aFrame) {
       }
     }
 
+    EventStateManager* const esm = mPresContext->EventStateManager();
+    esm->NotifyDestroyingFrameForGesture(aFrame);
+
     mFramesToDirty.Remove(aFrame);
 
     if (ScrollContainerFrame* scrollContainerFrame = do_QueryFrame(aFrame)) {
